<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/thumbNail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/thumbnail_image"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/date"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/date" />

        <TextView
            android:id="@+id/headLine"
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_below="@+id/date"
            android:contentDescription="@string/headline" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>